--- a/01.introduction.md
+++ b/01.introduction.md
@@ -1,10 +1,58 @@
 # Introduction
 
-## Concept
-The C programming language is a general-purpose, high-level language that is widely used for system programming, application development, and embedded systems. Developed in the early 1970s, C provides low-level access to memory and is known for its efficiency and performance. It serves as the foundation for many modern programming languages and is essential for understanding computer science principles.
+The `C` programming language is a general-purpose, high-level language that is widely used for system programming, application development, and embedded systems. Developed in the early 1970s, `C` provides low-level access to memory and is known for its efficiency and performance. It serves as the foundation for many modern programming languages and is essential for understanding computer science principles.   
+
+## Concept   
+
+
+### Instruction Flow
+All programs follow a consistent pattern, executing a set of instructions in a specific order. This section will explain how instructions are organized and executed in the `C` language.
+
+A program consists of instructions that are executed sequentially to complete a task. For instance, a program to sum two numbers will include the following steps:
+
+1. Initialize the first number `num1`.
+2. Initialize the second number `num2`.
+3. Calculate the sum of num1 and `num2`.
+
+These instructions are executed one after another.
+
+We can alter the flow of these instructions using **control flow** statements provided by the language, such as `for` loops and `if` statements.
+
+In `C`, instructions are executed in order unless a **control flow** statement changes that order by skipping or repeating certain instructions.
+
+
+### Print
+The `print statement` is a method for displaying text on an output device, such as the console screen.
+
+In C, we use the printf function to print text. Here’s an example:
+
+```c
+#include <stdio.h>
+
+int main() {
+    printf("Hello from C");
+    return 0;
+}
+```
+
+Let’s break down this code line by line to understand the structure of a `C` program and the print statement:
+
+- `#include <stdio.h>`: This line includes the standard input-output library, which allows us to read from and write to the console.
+- `main()`: This defines the main function, which every `C` program must have. It serves as the entry point for execution.
+- `int` is the return type of the `main` function. If `main` returns 0, the program has executed successfully; a non-zero return indicates an error.
+- `printf("Hello from C");`: This line calls the printf function to print the specified text. By default, the output goes to the console.
+- `return 0;`: This line terminates the program and indicates success with an exit code of 0.
+The output of the above code is:
+
+```
+Hello from C
+```
+
+> Any line that starts with # is called a preprocessor directive.
+
 
 ## Example
-A simple example of a C program that prints "Hello, World!" to the console:
+A simple example of a `C` program that prints "Hello, World!" to the console:
 
 1. Create a file with ".c" extention, we will create **hello.c** file.
 2. Open **hello.c**.
@@ -26,13 +74,10 @@ int main() {
 Hello, World!
 ```
 
-In this example, we include the standard input-output library `#include <stdio.h>`.   
-Define the main function `int main(){}`.    
-Use printf to display a message `printf("Hello, World!");`.   
 
 ## Practice
 
-Write a C program that prints "C Language" to the console.
+Write a `C` program that prints "C Language" to the console.
 
 ```c
 #include <stdio.h>
