--- a/01.introduction.md
+++ b/01.introduction.md
@@ -12,19 +12,16 @@ A program consists of instructions that are executed sequentially to complete a 
 
 1. Initialize the first number `num1`.
 2. Initialize the second number `num2`.
-3. Calculate the sum of num1 and `num2`.
+3. Calculate the sum of `num1` and `num2`.
 
 These instructions are executed one after another.
 
-We can alter the flow of these instructions using **control flow** statements provided by the language, such as `for` loops and `if` statements.
-
-In `C`, instructions are executed in order unless a **control flow** statement changes that order by skipping or repeating certain instructions.
-
+In `C`, instructions are executed in order unless a **control flow** statement changes that order by skipping or repeating certain instructions. We can alter the flow of these instructions using **control flow** statements provided by the language, such as `for` loops and `if` statements.
 
 ### Print
 The `print statement` is a method for displaying text on an output device, such as the console screen.
 
-In C, we use the printf function to print text. Here’s an example:
+In `C`, we use the `printf` function to print text. Here’s an example:
 
 ```c
 #include <stdio.h>
@@ -42,8 +39,9 @@ Let’s break down this code line by line to understand the structure of a `C` p
 - `int` is the return type of the `main` function. If `main` returns 0, the program has executed successfully; a non-zero return indicates an error.
 - `printf("Hello from C");`: This line calls the printf function to print the specified text. By default, the output goes to the console.
 - `return 0;`: This line terminates the program and indicates success with an exit code of 0.
+<br>
+<br>
 The output of the above code is:
-
 ```
 Hello from C
 ```
