--- a/01.introduction.md
+++ b/01.introduction.md
@@ -4,7 +4,6 @@ The `C` programming language is a general-purpose, high-level language that is w
 
 ## Concept   
 
-
 ### Instruction Flow
 All programs follow a consistent pattern, executing a set of instructions in a specific order. This section will explain how instructions are organized and executed in the `C` language.
 
@@ -38,18 +37,19 @@ Let’s break down this code line by line to understand the structure of a `C` p
 - `main()`: This defines the main function, which every `C` program must have. It serves as the entry point for execution.
 - `int` is the return type of the `main` function. If `main` returns 0, the program has executed successfully; a non-zero return indicates an error.
 - `printf("Hello from C");`: This line calls the printf function to print the specified text. By default, the output goes to the console.
-- `return 0;`: This line terminates the program and indicates success with an exit code of 0.
-<br>
-<br>
+- `return 0;`: This line terminates the program and indicates success with an exit code of 0.    
+
 The output of the above code is:
+
 ```
 Hello from C
 ```
-
-> Any line that starts with # is called a preprocessor directive.
-
+    
+> Any line that starts with `#` is called a preprocessor directive.   
+<br>
 
 ## Example
+
 A simple example of a `C` program that prints "Hello, World!" to the console:
 
 1. Create a file with ".c" extention, we will create **hello.c** file.
@@ -71,7 +71,6 @@ int main() {
 ```
 Hello, World!
 ```
-
 
 ## Practice
 
