--- a/02.variables.md
+++ b/02.variables.md
@@ -7,15 +7,15 @@ In C, you must specify both a **name** and a **data type** when creating a varia
 ```c
 data_type name = value;
 ```
-- **data_type**: Determines the type of value that will be stored in it (such as int or float). 
-- **name**: The identifier you use to refer to the variable (such as age or myName). 
+- **data_type**: Determines the type of value that will be stored in it (such as `int` or `float`). 
+- **name**: The identifier you use to refer to the variable (such as `age` or `myName`). 
 - **=**: The assignment operator, used to assign a value to the variable. 
 
 Create a variable called **myNum** of type **int** and assign the value **15** to it:
 ```c
 int myNum = 15;
 ```
-You can also declare a variable without assigning the value, and assign the value later:
+You can also declare a variable without assigning a value, and assign the value later:
 ```c
 // Declare a variable
 int myNum;
@@ -23,7 +23,8 @@ int myNum;
 // Assign a value to the variable
 myNum = 15;
 ```
-> Note: If you use a variable before assigning a value to it, its value is undefined (contains "garbage" data).
+> [!NOTE]
+> If a variable is used before it has been assigned a value, its contents are undefined and may contain any random data left in memory.
 
 In C, every variable must be declared before it is used. You can also declare **multiple variables of the same data type** in a single statement by **separating their names with commas**:
 ```c
@@ -33,7 +34,7 @@ data_type name1, name2, name3;
 int age, number, sum;
 ```
 
-You can update a variable's value with a new one of the **same type** using the assignment operator =:
+You can update a variable's value as long as the new value is of the **same type**, using the assignment operator =:
 ```c
 // Create an integer variable
 int number = 3;
@@ -41,7 +42,7 @@ int number = 3;
 // Update the value
 number = 22;
 
-// Attempting to assign a float value to an int variable.
+// Attempting to assign a float value to an int variable will cause an error.
 number = 3.5; // Error: Cannot assign a float value to an int variable.
 ```
 ### Rules for Naming Variables in C
@@ -49,7 +50,7 @@ Variable names in C must follow these rules:
 - Variable names must **only** contain **letters**, **digits**, and **underscores**.
 - Variable names must **start with a letter or an underscore.**
 - Variable names **cannot contain whitespace or special characters** like %, #, !, ?, etc.
-- Variable names must **not be reserved words** (keywords).
+- Variable names **must not be reserved words** (keywords).
 - Variable names are **case-sensitive** (`myVar` and `myvar` are different variables). 
 
 ## Example
