--- a/03.constants.md
+++ b/03.constants.md
@@ -48,4 +48,4 @@ const int DAYS_IN_WEEK = 7;
 ```
 
 ## Practice
-- Think of **three real-world values** that should remain constant throughout a program. Write C code to define each value as a constant using both the `#define` directive and the `const` keyword.
+- Think of **three real-world values** that should remain constant throughout a program. Write C code to define each value as a constant using both the `#define` and `const`.
