--- a/bootcamp/04.data-types.md
+++ b/bootcamp/04.data-types.md
@@ -6,7 +6,7 @@ In `C`, every variable must have a `data type` assigned to it, which determines 
 <br/>
 
 ### int
-Stores whole numbers (integers) without decimal points, such as `10` is an allowed value, while `10.5` is not.
+Stores whole numbers (integers) without decimal points, such as `10`, which is an allowed value, while `10.5` is not.
 
 | Size | Range | Example | 
 | --- | --- | --- | 
@@ -194,7 +194,7 @@ This process could happen in two ways:
 #include <stdio.h>
 
 int main() {
-    float f1 = 11.11;
+    float f1 = 11.11f;
   	int i;
   
     // Implicit type conversion from (float) -> to (int)
