--- a/bootcamp/04.data-types.md
+++ b/bootcamp/04.data-types.md
@@ -62,6 +62,9 @@ Stores a single character, and it's enclosed in single quotes.
 The void data indicates the absence of a value. Variables of void data type are not allowed. It can only be used for pointers, function return type, and parameters.    
 <br>
 
+> `C` includes built-in data types like `int`, `float`, `double`, and `void`.
+> External types such as `bool` and `string` require libraries like **stdbool.h** and **string.h**.
+
 ### Format Specifier    
 For printing a value/variable on the console, a format specifier must be written inside the `printf()` function. There are format specifiers for each data type.
         
