--- a/bootcamp/04.data-types.md
+++ b/bootcamp/04.data-types.md
@@ -62,10 +62,12 @@ Stores a single character, and it's enclosed in single quotes.
 The void data indicates the absence of a value. Variables of void data type are not allowed. It can only be used for pointers, function return type, and parameters.    
 <br>
 
-> `C` includes built-in data types like `int`, `float`, `double`, `char`, and `void`.
-> External types such as `bool` and `string` require libraries like **stdbool.h** and **string.h**.
+> All mentioned types above are built-in data types  in C that can be referenced directly, such as `int` and `float`. However, the boolean data type, which represents the values `true` and `false`, requires the `<stdbool.h>` library  to be used. 
+
 <br>
-### Format Specifier    
+
+### Format Specifier   
+
 For printing a value/variable on the console, a format specifier must be written inside the `printf()` function. There are format specifiers for each data type.
         
 #### Syntax    
@@ -128,7 +130,7 @@ Output
 
 
 ### sizeof()
-The `sizeof()` function is used to check the size of the data types in bytes, and `%zu` format specifier is used to print its output.    
+The `sizeof()` function is used to check the size of the data types in bytes, and the `%zu` format specifier is used to print its output.    
 
 #### print a value size
 ```c
