--- a/bootcamp/05.Operators.md
+++ b/bootcamp/05.Operators.md
@@ -101,8 +101,8 @@ Operate on individual bits of data.
 | \|     | Bitwise OR  |Compares each bit of two numbers. If at least one bit in a position is 1, the result in that position is 1, otherwise 0     |a \| b 
 | ^      | Bitwise XOR |Compares each bit of two numbers. If the bits are different, the result in that position is 1, otherwise 0       | a ^ b
 | ~      | Complement  |Each 0 becomes 1, and each 1 becomes 0   | ~a  
-| <<     | Left Shift  |Each bit in the left operand is shifted to the left by the number of positions specified by the right operand. Zeros fill the vacant positions on the right and any bits shifted beyond the leftmost position are discarded|  a << 2   
-| >>     |  Right Shift |Bits shifted beyond the rightmost position are discarded. The way the empty positions on the left are filled differs for unsigned numbers, the bit positions that have been vacated by the shift operation are zero-filled and for signed numbers, the sign bit is used to fill the vacated bit positions.if the number is positive, 0 is used, and if the number is negative, 1 is used|a >> 2 
+| <<     | Left Shift  |Each bit in the left operand is shifted to the left by the number of positions specified by the right operand. Zeros fill the vacant positions on the right, and any bits shifted beyond the leftmost position are discarded|  a << 2   
+| >>     |  Right Shift |Shifted bits beyond the rightmost position are discarded. For unsigned numbers, the vacated positions are zero-filled, while for signed numbers, the sign bit dictates the filling — 0 for positive numbers and 1 for negative numbers.|a >> 2 
 
 
    | a | b | a & b | a \| b | a ^ b |
@@ -149,7 +149,7 @@ X>> 2 = 0000 1111  (Right Shift by 2)
 
 ## Boolean Data Type
 
-The Boolean data type represents a value of true (1) or false (0). In C, Boolean is not a built-in type but is defined in the <stdbool.h> library.
+The Boolean data type represents a value of true (1) or false (0). In C, Boolean is not a built-in type but is defined in the `<stdbool.h>` library.
 
 
 ```c
@@ -160,6 +160,8 @@ bool variableName;
 * `bool` is the keyword used for boolean values, as defined in stdbool.h header file.
 * The `variableName` defines the name of the variable we are declaring. It will hold a boolean value (true or false).
 
+
+* Logical AND operator (&&)
 ```c
 #include <stdio.h>
 #include <stdbool.h>
@@ -167,15 +169,30 @@ int main() {
     bool a = true;
     bool b = false;
     int result;
-    // Logical AND operator (&&)
     result = a && b;
     printf("a && b = %d\n", result);
+}
+```
+Output
+```
+a && b = 0
+```
 
-    // Logical OR operator (||)
+* Logical OR operator (||)
+```c
+#include <stdio.h>
+#include <stdbool.h>
+int main() {
+    bool a = true;
+    bool b = false;
+    int result;
     result = a || b;
     printf("a || b = %d\n", result);
-
 }
+```
+Output
+```
+a || b = 1
 ```
 
 
@@ -187,8 +204,8 @@ Write a C program to perform bitwise AND, OR, XOR, NOT, left shift, and right sh
 #include <stdio.h>
 
 int main() {
-    int a = 12; // Binary: 0000 1100
-    int b = 25; // Binary: 0001 1001
+    int a = 12; // Binary: 1100
+    int b = 8;  // Binary: 1000
 }
 
 ```
