--- a/bootcamp/05.Operators.md
+++ b/bootcamp/05.Operators.md
@@ -159,6 +159,7 @@ bool variableName;
 
 * `bool` is the keyword used for boolean values, as defined in stdbool.h header file.
 * The `variableName` defines the name of the variable we are declaring. It will hold a boolean value (true or false).
+> Even without stdbool.h, C treats 0 as false and any non-zero value as true in logical expressions.
 
 
 
@@ -197,8 +198,6 @@ Output
 ```
 a || b = 1
 ```
-
-
 
 ## **Practice**
 Write a C program to perform bitwise AND, OR, XOR, NOT, left shift, and right shift on two integers
