--- a/bootcamp/05.Operators.md
+++ b/bootcamp/05.Operators.md
@@ -15,8 +15,8 @@ Used for basic mathematical operations.
 | *      |   Multiplication  |    Multiplies two values     |    a * b         |
 | /      |   	Division  |    Divides one value by another     |     a / b       |
 | %      |    Modulus |      Returns the division remainder   |   a % b          |
-| ++     |    Increment |     	Increases the value of a variable by 1    |   ++a          |
-| --     |    Decrement |     	Decreases the value of a variable by 1    |   --a          |
+| ++     |    Increment |     	Increases the value of a variable by 1    |   ++a, a++        |
+| --     |    Decrement |     	Decreases the value of a variable by 1    |  --a, a--  |
 
  
 ```c
@@ -69,11 +69,14 @@ int main() {
 ### Logical Operators
 
 Logical operators are used to combine multiple conditions to produce a single Boolean result (true or false).
+>Boolean data type can only hold true (1) or false (0).
+
 | Operator | Name   | Description | Example  |
 |:----------:|:-----------:|:---------:|:-----------:|
 | &&     | AND |Returns 1 if both statements are true | a && b |
 |  \| \|   | OR |Returns 1 if one of the statements is true | a \| \| b   |
-| !      |	NOT | Reverse the result, returns 0 if the result is 1|!a |
+| !      |	NOT | Reverse the value, returns 0 if the value is 1|!a |
+
 
 ```c
 #include <stdio.h>
@@ -87,6 +90,10 @@ int main() {
     // Output: 1 (true)
     printf("Logical NOT: %d\n", !a);
     // Output: 0 (false)
+    printf("a > b: %d\n", a > b);
+    // Output: 1 (true) since 1 is greater than 0
+    printf("a != b: %d\n", a != b);
+  // Output: 1 (true) since a (1) is not equal to b (0)
 
     return 0;
 }
@@ -162,7 +169,7 @@ bool variableName;
 > Even without stdbool.h, C treats 0 as false and any non-zero value as true in logical expressions.
 
 
-
+* Logical AND operator (&&)
 ```c
 #include <stdio.h>
 #include <stdbool.h>
@@ -173,14 +180,13 @@ int main() {
     result = a && b;
     printf("a && b = %d\n", result);
 }
-```
-* Logical AND operator (&&)
-  
+```  
 Output
 ```
 a && b = 0
 ```
 
+* Logical OR operator (||)
 ```c
 #include <stdio.h>
 #include <stdbool.h>
@@ -191,16 +197,14 @@ int main() {
     result = a || b;
     printf("a || b = %d\n", result);
 }
-```
-* Logical OR operator (||)
-  
+```  
 Output
 ```
 a || b = 1
 ```
 
 ## **Practice**
-Write a C program to perform bitwise AND, OR, XOR, NOT, left shift, and right shift on two integers
+Write a C program to perform bitwise AND, OR, XOR, NOT, left shift, and right shift on the two integers provided.
 
 ```c
 #include <stdio.h>
