--- a/bootcamp/05.Operators.md
+++ b/bootcamp/05.Operators.md
@@ -90,11 +90,8 @@ int main() {
     // Output: 1 (true)
     printf("Logical NOT: %d\n", !a);
     // Output: 0 (false)
-    printf("a > b: %d\n", a > b);
-    // Output: 1 (true) since 1 is greater than 0
-    printf("a != b: %d\n", a != b);
-  // Output: 1 (true) since a (1) is not equal to b (0)
-
+    printf("a != b && a>b: %d\n",a != b && a>b);
+    // Output: 1 (true)
     return 0;
 }
 ```
