--- a/bootcamp/09.array.md
+++ b/bootcamp/09.array.md
@@ -5,9 +5,9 @@ The `array` is a fixed-size collection of multiple values stored in a single var
 #### Key Points
 
 - An array can hold a collection of primitive data types (such as **int**, **char**, etc.) or user-defined data types (such as **pointers** or **structs**).
-- **Length** of an array refers to the number of elements it can store.
+- `Length` (a.k.a size) of an array refers to the number of elements it can store.
 - Each element can be accessed directly using its `index`.
-- Array indices represent the position of elements. In most programming languages (including C), they start from `0` up to `n-1` (where `n` is the array’s size).
+- Array indices represent the position of elements. In most programming languages (including C), they start from **0** up to **n-1** (where **n** is the array’s size).
 
 
 ### Declaring and Initializing Arrays
