--- a/bootcamp/11.function.md
+++ b/bootcamp/11.function.md
@@ -1,4 +1,4 @@
-## Functions
+## Function
 
 A function is **a block of code that performs a specific task** and can be called (executed) whenever needed. Functions are used to achieve code reusability and break down complex problems into smaller, manageable parts.
 
