--- a/bootcamp/08.pointer.md
+++ b/bootcamp/08.pointer.md
@@ -51,7 +51,7 @@ int main() {
     return 0;
 }
 ```
-printing `*ptr_value` will output value at address pointed by `ptr_value` which is 10. Here, the `*ptr_value` expression **dereferences** the pointer.    
+Printing `*ptr_value` will output value at address pointed by `ptr_value` which is 10. Here, the `*ptr_value` expression **dereferences** the pointer.    
 
 Output
 ```
