--- a/bootcamp/13.header-files.md
+++ b/bootcamp/13.header-files.md
@@ -156,7 +156,7 @@ Enter a character: a
 ### How to Create Your Own Header File
 - Create a file with a `.h` extension (e.g., myheader.h).
 - Write your function prototypes, macros, or constants in this file.
-> Macros serve as symbolic names or constants that represent values, expressions, and defined using the #define preprocessor directive. Which are replaced with their defined content during the preprocessing phase, before the actual compilation.
+> Macros serve as symbolic names or constants that represent values or expressions. They are defined using the `#define` preprocessor directive, and are replaced with their defined content during the preprocessing phase, before the actual compilation.
 
 - Create `myheader.h` file.
 ```c
