--- a/bootcamp/12.union.md
+++ b/bootcamp/12.union.md
@@ -1,112 +1,91 @@
-# Data Type Modifiers 
+# Union
 
-**Modifiers** are keywords you can use with basic data types (such as `int`, `char`, `double`) to change their properties, including their **size in memory** and the **range of values** they can represent.
+In C, a **union** is a special data type that allows you to store different data types in the same memory location. Unlike a `struct`, where each member has its own memory space, members of a `union` share the same memory. This means only one member can hold a value at any given time.
 
-### Modifiers
-
-| Modifier    | Meaning                                                                             |
-|-------------|-------------------------------------------------------------------------------------|
-| `signed`    | Allows both negative and positive numbers (default for most types)                  |
-| `unsigned`  | Allows only zero and positive numbers              |
-| `short`     | Reduces the size and range of the type                                            |
-| `long`      | Increases the size and range of the type                                          |
-
->[!NOTE]
-> The actual size and range are determined by your system and compiler.
-
-## How to Use Modifiers
-Modifiers are placed before the data type, and can be combined as needed:
-
+### Defining a Union
 ```c
-unsigned int count;
-long int big_number;
-unsigned short int small_positive;
-unsigned long int big_number;
-```
->[!NOTE]
-> The order of modifiers doesn’t matter: `long unsigned int` is the same as `unsigned long int`.
-
-
-## Modifiers with the `int` Type
-All four modifiers can be used with `int`:
-- **`signed int`** (default): Can store both negative and positive values.
-- **`unsigned int`**: Can only store zero and positive values, but doubles the maximum representable positive value compared to `signed int`.
-- **`short int`**: Stores a smaller range of values and typically uses less memory (commonly 2 bytes).
-- **`long int`**: Stores a larger range of values and typically uses more memory (commonly 4 or 8 bytes).
-- **Combinations** (e.g., `unsigned short int`): Modify both the sign and size.
-
-**Example:**
-```c
-signed int balance = -100;          
-unsigned int age = 25;               
-short int s = 32000;                 
-unsigned short int us = 65000;       
-long int l = 2000000000L;            
+union union_name {
+    data_type variable_name;
+    data_type variable_name;
+};
 ```
 
-## Modifiers with the `char` Type
+* **union**: A keyword to define a union.
+* **union_name**: The name of the union.
+* **data_type variable_name**: Create a member of the union, which can be any data type.
 
-- **`signed char`**: Stores character values as signed numbers (typically -128 to 127).
-- **`unsigned char`**: Stores character values as unsigned numbers (0 to 255).
-- **`short char`** and **`long char`**: *Not valid* in standard C programming language.
-
-**Example:**
+Example:
 ```c
-signed char ch1 = 'A';    
-unsigned char ch2 = 'b';   
+union Data {
+    int i; // 4 bytes
+    float f; // 4 bytes
+    char str[20]; // 20 bytes
+};
 ```
 
-## Modifiers with Floating-Point Types
+>[!Note]
+> All members of the union share the same memory space. The size of the union is determined by the size of its largest member; the size of `union Data` will be **20 bytes** (the size of `str`).
 
-With floating-point types, **only `long`double** is valid. All the other modifiers are not allowed.
 
-| Type                | Valid  |
-|---------------------|--------|
-| `signed float`      | No     | 
-| `unsigned float`    | No     |
-| `short float`       | No     |
-| `long float`        | No     | 
-| `signed double`     | No     | 
-| `unsigned double`   | No     | 
-| `short double`      | No     | 
-| `long double`       | Yes    |
 
-**Example:**
+### Example
+To use a union, declare it within the `main()` function, just like a `struct`.
+
 ```c
-float f = 3.14f;
-double d = 3.1415926535;
-long double ld = 3.141592653589793238L;
+#include <stdio.h>
+
+union Data {
+    int i;
+    float f;
+    char str[20];
+};
+
+int main() {
+    union Data variable;
+
+    variable.i = 42;  // Assign integer
+    printf("Integer: %d\n", variable.i);
+
+    variable.f = 3.14;  // Assign float (overwrites previous value)
+    printf("Float: %.2f\n", variable.f);
+    printf("Integer: %d\n", variable.i); // Accessing `variable.i` here will result in an undefined behavior value because the memory is overwritten.
+
+    sprintf(variable.str, "Hello");  // Assign string (overwrites previous value)
+    printf("String: %s\n", variable.str);
+
+    return 0;
+}
 ```
 
-## Example
+Output:
+```
+Integer: 42
+Float: 3.14
+Integer: 1078523331
+String: Hello
+```
+
+>[!Note]
+>Since all members share the same memory, assigning a new value to one member will overwrite the previous value.
+
+
+
+## Practice
+1. Define a union called `Value` with:
+   - An integer `id`.
+   - A float `price`.
+   - A string `description[30]`.
+
+2. Create a variable of type `union` Value.
+
+3. Assign values to each member and print them. Observe how the values overwrite each other.
+
 ```c
 #include <stdio.h>
 
 int main() {
-    short int a = 32767;
-    unsigned int b = 4000000000U;
-    signed char ch = 'c';
-    unsigned char uch = 'n';
-    long double pi = 3.141592653589793238L;
+    // Write your code here
 
-    printf("Short: %d\n", a);
-    printf("Unsigned: %u\n", b);
-    printf("Signed char: %d\n", ch);
-    printf("Unsigned char: %u\n", uch);
-    printf("Long double: %Lf\n", pi);
     return 0;
 }
 ```
-**Output:**
-```
-Short: 32767
-Unsigned: 4000000000
-Signed char: 99
-Unsigned char: 110
-Long double: 3.141593
-```
-## Practice
-
-- Write a C program that declares **five variables**, using a different valid combination of data type modifiers.
-- Use `printf()` to display the value of each variable, using the correct format specifier.
-- Use `sizeof()` to print the size of each variable.
