--- a/bootcamp/05.modifiers.md
+++ b/bootcamp/05.modifiers.md
@@ -14,7 +14,7 @@
 >[!NOTE]
 > The actual size and range are determined by your system and compiler.
 
-## How to Use Modifiers
+## How to use Modifiers
 Modifiers are placed before the data type, and can be combined as needed:
 
 ```c
