--- a/bootcamp/13.function.md
+++ b/bootcamp/13.function.md
@@ -89,6 +89,50 @@ int addNumbers(int a, int b) {
 ```      
 <br/>
 
+### Inline Functions
+An inline function is a function that is expanded in line when it is invoked, meaning the compiler attempts to insert the function’s code at the point of each call, instead of performing a regular function call. 
+
+
+#### Syntax
+```c
+inline returnType functionName(parameter list) {
+    // code
+}
+```
+#### Example
+```c
+#include <stdio.h>
+
+// Inline function declaration 
+inline int multiply(int a, int b);
+
+int main() {
+    int result = multiply(3, 4); // The compiler replaces multiply(3, 4) with its code, avoiding a function call.
+
+    printf("Result: %d\n", result); 
+    return 0;
+}
+
+// Inline function definition
+int multiply(int a, int b) {
+    return a * b;
+}
+```
+**multiply** function:
+*   **keyword**: `inline` before the function’s return type.
+*   **returnType**: `int`
+*   **functionName**: `multiply`
+*   **parameters**: `int a`, `int b`.
+  
+Output:
+```
+Result: 12
+```
+<br/>
+
+> [!WARNING]
+> Not all functions are suitable for inlining. Typically, large or complex functions, as well as those that involve recursion, are not inlined by the compiler.
+
 
 ### Call by Value vs. Call by Reference
 
