--- a/bootcamp/18.socket/02.tcp-example.md
+++ b/bootcamp/18.socket/02.tcp-example.md
@@ -68,7 +68,7 @@ int main() {
     int addrlen = sizeof(address);
     char buffer[BUFFER_SIZE] = {0};
 ```
-**Variable declarations**:    
+- **Variable declarations**:    
 `server_fd`: File descriptor for the server socket.    
 `new_socket`: File descriptor for the accepted client socket.    
 `address`: Structure to hold address information.    
@@ -78,13 +78,13 @@ int main() {
 ```c
     server_fd = socket(AF_INET, SOCK_STREAM, 0);
 ```
-**Create socket**:     
+- **Create socket**:     
 `socket(AF_INET, SOCK_STREAM, 0)` creates a TCP socket `(SOCK_STREAM)` using IPv4 `(AF_INET)`.
 The result is assigned to `server_fd`.
 ```c
     setsockopt(server_fd, SOL_SOCKET, SO_REUSEADDR, &opt, sizeof(opt));
 ```
-**Set socket options**:    
+- **Set socket options**:    
 `setsockopt` allows the socket to reuse the address, avoiding "address already in use" error.
 `SOL_SOCKET `specifies the socket level from which you want to set the option.
 
@@ -93,55 +93,55 @@ The result is assigned to `server_fd`.
     address.sin_addr.s_addr = INADDR_ANY;  
     address.sin_port = htons(PORT);  
 ```
-**Setup address structure**:    
+- **Setup address structure**:    
 `sin_family`: Set to AF_INET for IPv4.
 `sin_addr.s_addr`: INADDR_ANY means the server will accept connections from any IP address.
 `sin_port`: Set to the specified port after converting it to network byte order with htons.
 ```c
     bind(server_fd, (struct sockaddr *)&address, sizeof(address));
 ```
-**Bind socket**:     
+- **Bind socket**:     
 Associates the socket with the specified address and port.
 ```c
     listen(server_fd, 3);
 ```
-**Listen for connections**:     
+- **Listen for connections**:     
 Put the server socket in listening mode, allowing it to accept incoming connections (up to 3 queued connections).
 ```c
     printf("Server is listening on port %d\n", PORT);
 ```
-**Output a message**:     
+- **Output a message**:     
 Inform that the server is ready to accept connections.
 ```c
     new_socket = accept(server_fd, (struct sockaddr *)&address, (socklen_t*)&addrlen);
 ```
-**Accept a connection**:     
+- **Accept a connection**:     
 Block until a client connects; create a new socket (new_socket) for the client.
 ```c
     read(new_socket, buffer, BUFFER_SIZE);
 ```
-**Read data**:     
+- **Read data**:     
 Read data sent by the client into the buffer.
 ```c
     printf("Received from client: %s\n", buffer);
 ```
-**Output received data**:     
+- **Output received data**:     
 Print the data received from the client.
 ```c
     char *message = "Hello from server";
 ```
-**Prepare response**:     
+- **Prepare response**:     
 Create a string response to send back to the client.
 ```c
     send(new_socket, message, strlen(message), 0);
 ```
-**Send response**:    
+- **Send response**:    
 Send the response message to the connected client.
 ```c
     close(new_socket);
     close(server_fd);
 ```
-**Close sockets**:     
+- **Close sockets**:     
 Close the client and server sockets to free resources.
 
 ### Client Code (`client.c`)
@@ -194,7 +194,7 @@ int main() {
 #define PORT 8080
 #define BUFFER_SIZE 1024
 ```
-**Defines constants**:   
+- **Defines constants**:   
 Same as the server.
 
 ```c
@@ -203,7 +203,7 @@ Same as the server.
     char *message = "Hello from client";
     char buffer[BUFFER_SIZE] = {0};
 ```
-**Variable declarations**:     
+- **Variable declarations**:     
 `sock`: File descriptor for the client socket.    
 `serv_addr`: Structure to hold server address information.     
 `message`: Message to send to the server.    
@@ -211,49 +211,49 @@ Same as the server.
 ```c
     sock = socket(AF_INET, SOCK_STREAM, 0);
 ```
-**Create socket**:     
+- **Create socket**:     
 Same as the server, creating a TCP socket.
 ```c
     serv_addr.sin_family = AF_INET;  
     serv_addr.sin_port = htons(PORT);  
 ```
-**Setup address structure**:    
+- **Setup address structure**:    
 `sin_family`: Set to AF_INET for IPv4.
 `sin_port`: Set to the specified port after converting it to network byte order with htons.
 ```c
     inet_pton(AF_INET, "127.0.0.1", &serv_addr.sin_addr)
 ```
-**Convert IP address**:     
+- **Convert IP address**:     
 Convert the IP address from text to binary form for use in the socket address.
 ```c
     connect(sock, (struct sockaddr *)&serv_addr, sizeof(serv_addr));
 ```
-**Connect to the server**:     
+- **Connect to the server**:     
 Attempt to connect the client socket to the server's address.
 ```c
     send(sock, message, strlen(message), 0);
 ```
-**Send message**:     
+- **Send message**:     
 Send data to the server.
 ```c
     printf("Message sent to server\n");
 ```
-**Output confirmation**:     
+- **Output confirmation**:     
 Inform that the message has been sent.
 ```c
     read(sock, buffer, BUFFER_SIZE);
 ```
-**Read response**:     
+- **Read response**:     
 Wait for data from the server and store it in the buffer.
 ```c
     printf("Received from server: %s\n", buffer);
 ```
-**Output received data**:     
+- **Output received data**:     
 Print the response received from the server.
 ```c
     close(sock);
 ```
-**Close the socket**:     
+- **Close the socket**:     
 Release the socket resource.
 ### Run `server.c`
 ```bash
