--- a/bootcamp/18.socket/03.udp-example.md
+++ b/bootcamp/18.socket/03.udp-example.md
@@ -53,7 +53,7 @@ int main() {
     char buffer[BUFFER_SIZE];
     socklen_t addr_len = sizeof(client_addr);
 ```
-**Variable declarations**:    
+- **Variable declarations**:    
 `sockfd`: File descriptor for the socket that the server will use.   
 `server_addr`: Structure to hold the server's address information.   
 `client_addr`: Structure to hold the client's address information.   
@@ -63,7 +63,7 @@ int main() {
 ```c
     sockfd = socket(AF_INET, SOCK_DGRAM, 0);
 ```
-**Create a UDP socket**:    
+- **Create a UDP socket**:    
 `socket(AF_INET, SOCK_DGRAM, 0)`: Creates a new socket using IPv4 (AF_INET) and the UDP protocol (SOCK_DGRAM).
 If creation fails, sockfd will be -1.
 ```c
@@ -71,7 +71,7 @@ If creation fails, sockfd will be -1.
     server_addr.sin_addr.s_addr = INADDR_ANY;  
     server_addr.sin_port = htons(PORT);
 ```
-**Set up the server address**:    
+- **Set up the server address**:    
 `sin_family`: Set to AF_INET to indicate IPv4.    
 `sin_addr.s_addr`: Set to INADDR_ANY to accept connections from any IP address.    
 `sin_port`: Set to the specified port number, converted from host byte order to network byte order using htons.    
@@ -79,18 +79,18 @@ If creation fails, sockfd will be -1.
 ```c
     bind(sockfd, (struct sockaddr *)&server_addr, sizeof(server_addr));
 ```
-**Bind the socket**:    
+- **Bind the socket**:    
 Associates the created socket with the specified address and port, allowing the server to listen for incoming data on that port.
 
 ```c
     printf("UDP server is listening on port %d\n", PORT);
 ```
-**Inform the user**:     
+- **Inform the user**:     
 Print to the console that the server is ready and listening for incoming messages.
 ```c
     ssize_t recv_len = recvfrom(sockfd, buffer, BUFFER_SIZE, 0, (struct sockaddr *)&client_addr, &addr_len);
 ```
-**Receive data**:    
+- **Receive data**:    
 `recvfrom()` waits for incoming data on the socket, reading it into the buffer.
 It also fills in the `client_addr` structure with the address of the client that sent the data.
 `recv_len` holds the number of bytes received.
@@ -100,37 +100,37 @@ if (recv_len < 0) {
         perror("recvfrom failed");
     }
 ```
-**Error handling**:    
+- **Error handling**:    
 If receiving data fails, print an error message.
 
 ```c
     buffer[recv_len] = '\0';
 ```
-**Null-terminate the received string**:     
+- **Null-terminate the received string**:     
 This is to ensure that the buffer is treated as a proper string by adding a null character at the end.
 
 ```c
     printf("Received from client: %s\n", buffer);
 ```
-**Output the received data**:     
+- **Output the received data**:     
 Print the message received from the client to the console.
 
 ```c
     const char *response = "Hello from UDP server";
 ```
-**Prepare a response**:     
+- **Prepare a response**:     
 Create a string that will be sent back to the client.
 
 ```c
     sendto(sockfd, response, strlen(response), 0, (struct sockaddr *)&client_addr, addr_len);
 ```
-**Send response to the client**:     
+- **Send response to the client**:     
 Using `sendto()`, the server sends the prepared response message back to the client's address.
 
 ```c
     close(sockfd);
 ```
-**Close the socket**:     
+- **Close the socket**:     
 Release the socket resource.
 
 
@@ -186,7 +186,7 @@ int main() {
     char *message = "Hello from UDP client";
     char buffer[BUFFER_SIZE];
 ```
-**Variable declarations**:     
+- **Variable declarations**:     
 `sockfd`: File descriptor for the client socket.    
 `server_addr`: Structure to hold the server's address information.    
 `message`: Message string to be sent to the server.    
@@ -195,7 +195,7 @@ int main() {
 ```c
     sockfd = socket(AF_INET, SOCK_DGRAM, 0);
 ```
-**Create UDP Socket**:     
+- **Create UDP Socket**:     
 Establishes a new UDP socket using IPv4. sockfd will store the socket descriptor.
 
 ```c
@@ -203,7 +203,7 @@ Establishes a new UDP socket using IPv4. sockfd will store the socket descriptor
     server_addr.sin_port = htons(PORT);
     inet_pton(AF_INET, "127.0.0.1", &server_addr.sin_addr);
 ```
-**Set Server Address**:    
+- **Set Server Address**:    
 Use IPv4 (`sin_family`).    
 Convert the port number to network byte order (`sin_port`).    
 Convert the IP address **"127.0.0.1"** (localhost) to binary format (`sin_addr`).   
@@ -212,14 +212,14 @@ Convert the IP address **"127.0.0.1"** (localhost) to binary format (`sin_addr`)
     sendto(sockfd, message, strlen(message), 0, (struct sockaddr *)&server_addr, sizeof(server_addr));
     printf("Message sent to server\n");
 ```
-**Send Message**:     
+- **Send Message**:     
 Send the message to the server and confirm by printing a message to the console.
 
 ```c
     socklen_t addr_len = sizeof(server_addr);
     ssize_t recv_len = recvfrom(sockfd, buffer, BUFFER_SIZE, 0, (struct sockaddr *)&server_addr, &addr_len);
 ```
-**Receive Response**:    
+- **Receive Response**:    
 Store the size of the server address.
 Wait for a response from the server, storing it in buffer and getting the length of received data.
 
@@ -231,7 +231,7 @@ if (recv_len < 0) {
         printf("Received from server: %s\n", buffer);
     }
 ```
-**Error Handling and Output**:    
+- **Error Handling and Output**:    
 If receiving fails, print an error message.    
 If successful, null-terminate the buffer and print the received message.    
 
