--- a/bootcamp/18.socket/01.socket.md
+++ b/bootcamp/18.socket/01.socket.md
@@ -58,7 +58,7 @@ UDP is faster and requires less overhead compared to TCP, making it suitable for
 
 
 
-## Practice (Uppercase Converter Application)
+## Practice
 Create an application where a client sends a message to a server, and the server responds with the message converted to uppercase.
 
 > The Practice should be solved using **TCP** or **UDP**.
